# tgbot-notebook

./: .gitignore  CMakeLists.txt  README.md
include/: database.hpp
src/: database.cpp  help_response.txt  main.cpp
